test/regress/coverage-amount-thousand-period-error.test
; Coverage test for amount.cc
; Incorrect use of thousand-mark period triggers error
; In European style (decimal comma), period acts as thousands separator
; but must be at 3-digit boundaries

2024/01/01 Test
    Expenses:Food       EUR 1.50,00
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 7:
While parsing posting:
  Expenses:Food       EUR 1.50,00
                      ^^^^^^^^^^^
Error: Incorrect use of thousand-mark period
end test
